--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/lndbaryshnikov/resume/issues"
   },
-  "homepage": "https://github.com/lndbaryshnikov/resume#readme"
+  "homepage": "https://github.com/lndbaryshnikov/resume#readme",
+  "devDependencies": {
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
+  }
 }
