--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
