--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
