--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "css-loader": "^2.1.1",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^4.0.0-alpha.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
