--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   },
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
     "autoprefixer": "^9.7.4",
     "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "favicons-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
-    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^4.0.0-alpha.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -39,7 +42,6 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-cli": "^3.3.0"
   }
 }
