--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "favicons-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.0.0-alpha.1",
+    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
