--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "favicons-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.0.0-alpha.1",
     "image-webpack-loader": "^6.0.0",
@@ -40,6 +39,7 @@
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
