--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
     "gh-pages": "^2.0.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
@@ -42,7 +43,6 @@
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack": "^4.29.6"
   }
 }
