--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "server": "webpack-dev-server --mode development --open",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "pug-lint": "pug-lint --config .pug-lintrc src"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/lndbaryshnikov/resume#readme",
   "devDependencies": {
     "gh-pages": "^2.0.1",
+    "pug-lint": "^2.6.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.2.1"
   },
