--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "watch": "webpack --mode development --watch",
     "server": "webpack-dev-server --mode development --open",
     "deploy": "gh-pages -d dist",
-    "pug-lint": "pug-lint --config .pug-lintrc src"
+    "pug-lint": "pug-lint --config .pug-lintrc src",
+    "stylelint": "stylelint --config .stylelintrc \"src/**/*.scss\"",
+    "stylelint-fix": "stylelint --config .stylelintrc \"src/**/*.scss\" --fix"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,8 @@
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "pug-lint": "^2.6.0",
+    "stylelint": "^13.1.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.2.1"
   },
