replace modifiers with elements for blocks positioning #28

--- a/.pug-lintrc
+++ b/.pug-lintrc
@@ -7,7 +7,7 @@
   "disallowIdAttributeWithStaticValue": true,
   "disallowLegacyMixinCall": true,
   "disallowMultipleLineBreaks": true,
-  "disallowSpacesInsideAttributeBrackets": true,
+  "disallowSpacesInsideAttributeBrackets": null,
   "disallowStringConcatenation": true,
   "disallowTrailingSpaces": true,
   "requireClassLiteralsBeforeAttributes": true,
