--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,7 @@
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
     "max-nesting-depth": null,
+    "max-empty-lines": 1,
     "selector-list-comma-newline-after": null,
     "selector-class-pattern": null,
     "order/properties-alphabetical-order": null
